--- a/app/src/assets/css/mobile.scss
+++ b/app/src/assets/css/mobile.scss
@@ -31,6 +31,12 @@
       width: 90%;
       margin-top: 5em;
 
+      #project-title-background{
+        position: relative;
+        left: 0;
+        bottom: 0;
+      }
+
       h2{
         font-family: 'PT Sans Narrow';
       }
@@ -68,6 +74,7 @@
       position: relative;
       top: 0;
       left: 0;
+      margin: 0 auto;
       margin-top: 4em;
       margin-bottom: 2em;
       // font-family: 'Roboto';
@@ -117,8 +124,16 @@
     }
 
     .about-content-block{
+      // display: block;
+      // width: 100%;
+
+    }
+
+    .about-content-block:nth-of-type(1){
+      position: relative;
+      width: 90%;
       display: block;
-      width: 100%;
+      margin: 0 auto;
 
       #intro-block{
         width: 90%;
@@ -140,10 +155,12 @@
 
     .about-content-block:nth-of-type(2){
       border: none;
-      margin-top: 1em;
-    }
+      width: 90%;
+      position: relative;
+      display: block;
+      margin: 0 auto;
+      margin-top: 2em;
 
-    .about-content-block{
       #about-me-block{
         width: 90%;
       }
@@ -151,9 +168,11 @@
       #skills-block{
         padding: 0;
         width: 90%;
+
         .skills{
           width: 48%;
         }
+
       }
     }
 
@@ -290,16 +309,27 @@
     margin-bottom: 2em;
 
     .about-content-block, #contributions-block{
-      display: block;
-      width: 85%;
-
       #about-me-block, #skills-block{
         width: 100%;
       }
     }
 
+    .about-content-block:nth-of-type(1){
+      margin-top: 6em;
+      display: block;
+      width: 90%
+    }
+
     .about-content-block:nth-of-type(2){
-      margin-top: 1em;
+      margin-top: 2em;
+      position: relative;
+      display: block;
+      width: 85%;
+      margin: 0 auto;
+    }
+
+    #contributions-block{
+      width: 90%;
     }
 
     p.svg{
